# libMendel-Audio

./: .gitignore  .project  README.md  build.gradle  settings.gradle
src/: MusicFile.h  libMendelAudio.h
src/File/: AudioFiles.h  FlacFile.cpp  FlacFile.h  IOUtils.cpp  IOUtils.h  MusicFile.cpp  MusicFile.h
src/main/java/me/oskarmendel/libMendelAudio/: MusicFile.java
src/main/java/me/oskarmendel/libMendelAudio/flac/: FlacFile.java  FlacParser.java
src/main/java/me/oskarmendel/libMendelAudio/util/: BinaryUtil.java
src/test/java/me/oskarmendel/libMendelAudio/flac/: FlacFileTest.java  FlacParserTest.java
src/test/java/me/oskarmendel/libMendelAudio/util/: BinaryUtilTest.java
tests/: BaseTest.cpp  CMakeLists.txt  FlacFileTests.cpp  IOUtilsTests.cpp  README.md  test_file.cpp
